PYIC-5082: Don't merge mitigations
Having spoken to the SPoT team it turns out we shouldn't be merging the
mitigations, just taking the most recent mitigations.

This also updates the tests for the vc creation logic to match with the
acceptance criteria on SPoTs ticket for the new deduplication logic.